--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <h3>Contact Me</h3>
-    Email: unknown@gmail.com<br>
-    Number: 090078601<br>
+    Email: meesam_rivi@hotmail.com<br>
+    Number: Just email me! <br>
     <form class="" action="index.html" method="post">
       <label>Name</label>
       <input type="text" name="" value=""><br>
