--- a/index.html
+++ b/index.html
@@ -7,16 +7,18 @@
 </head>
 
 <body>
-<table cellspacing="20">
-  <tr>
-    <td><img src="Images/Meesam.png" alt="Meesam Profile"></td>
-    <td><h1>Syed Rizvi</h1>
-    <p><em>Student at <a href="Student">TU Ilmenau</a></em>
-      <br>Masters of <a href="https://www.tu-ilmenau.de/studieninteressierte/studienangebot/master/research-in-computer-systems-engineering-msc/">Reserach in Computer and Information Systems</a></p>
-    <p>Computer & Info. Systems Graduate working on my Masters of Reserach in computer and information systems. My primary objectives are to endow my
-      delevopment skills and polish them under the supervision of learned.</p></td>
-  </tr>
-</table>
+  <table cellspacing="20">
+    <tr>
+      <td><img src="Images/Meesam.png" alt="Meesam Profile"></td>
+      <td>
+        <h1>Syed Rizvi</h1>
+        <p><em>Amateur Coder, Student at <a href="Student">TU Ilmenau</a></em>
+          <br>Masters of <a href="https://www.tu-ilmenau.de/studieninteressierte/studienangebot/master/research-in-computer-systems-engineering-msc/">Reserach in Computer and Information Systems</a></p>
+        <p>Computer & Information Systems Graduate working on my Masters of Reserach in Computer and Systems Engineering. My primary objectives are to endow my
+          delevopment skills and polish them under the supervision of learned.</p>
+      </td>
+    </tr>
+  </table>
 
 
   <hr>
@@ -68,6 +70,50 @@
         (Place here to further intend bullet)
     </ul>
   </ul>-->
+  <hr>
+  <h3>Work Experience</h3>
+  <table cellspacing="10">
+    <tr>
+      <td>Feb 2019–Sep 2019</td>
+      <td>
+        <strong>System Administrator </strong>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td><a href="https://1link.net.pk/">1Link Pvt. Limited</a></td>
+    </tr>
+    <tr>
+      <td>Feb 2017–Feb 2019</td>
+      <td>
+        <strong>Virtualization Specialist</strong>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td><a href="https://www.jaffer.com/jbspl/">Jaffer Business Systems Pvt. Ltd</a></td>
+    </tr>
+    <tr>
+      <td>Apr 2015–Sep 2016</td>
+      <td>
+        <strong>Volunteer </strong>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td>IEEE-NCS </td>
+    </tr>
+    <tr>
+      <td>Aug 2012–Present</td>
+      <td>
+      <strong>  Volunteer</strong>
+      </td>
+    </tr>
+    <tr>
+      <td></td>
+      <td></td>
+    </tr>
+  </table>
 
   <hr>
 
@@ -107,16 +153,51 @@
       </td>
     </tr>
   </table>
-</table>
+  </table>
 
   <hr>
+  <h3>Personal Skills</h3>
 
+    <table cellspacing=10>
+      <tr>
+        <td>Language(s)</td>
+        <td>English
+          <br>Urdu </td>
+        <td>C1 (CERF Level)
+          <br>Native</td>
+      </tr>
+    </table>
+    <table cellspacing=5>
+
+
+        <tr>
+      <td>Skills</td>
+      <td>Virtualization <br>
+        Windows AD Administration <br>
+        Linux Administration <br>
+        C++ <br>
+        AWS <br>
+        Backup <br></td>
+    </tr>
+    <tr>
+      <td>Certifications</td>
+      <td>VMware Certified Professional (VCP-NV 6.0) <br>
+        VMware Accredited VTSP and VSP Professional <br>
+        AWS Trained Cloud Practitioner <br>
+        AWS Fundamentals: Going Cloud-Native (Coursera) <br>
+        HP Accredited Engineer <br> </td>
+      </td>
+    </tr>
+  </table>
+
+
+  <hr>
 
   <a href="hobbies.html">
     <h4>My Hobbies</h4>
   </a>
   <a href="contact.html">
-    <h4>Contact me</h4>
+    <h4>Contact Me</h4>
   </a>
 
 </body>
